--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.7.2",
     "lucide-react": "^0.399.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
