--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BASE_URL_API = 'http://localhost:3300'
+# VITE_BASE_URL_API = 'http://localhost:3300'
+VITE_BASE_URL_API = 'https://bg-changer-node-production.up.railway.app'
